# ecommerce-analytics-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboards/: streamlit_app.py
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql  metrics.sql
dbt_project/models/marts/: _marts__models.yml  dim_date.sql  dim_products.sql  dim_users.sql  fct_daily_engagement.sql  fct_funnel.sql  fct_revenue.sql
dbt_project/models/staging/: _staging__models.yml  _staging__sources.yml  stg_events.sql  stg_products.sql  stg_users.sql
dbt_project/tests/: test_funnel_integrity.sql  test_revenue_consistency.sql  test_session_user_relationship.sql
docs/: architecture.md  data_dictionary.md
scripts/: data_validation.py  etl_pipeline.py  generate_events.py  utils.py
tests/: test_data_validation.py
