[project]
name = "ecommerce-analytics-pipeline"
version = "1.0.0"
description = "End-to-end data engineering pipeline for e-commerce analytics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dinesh Palli", email = "himself@dineshpalli.com" }
]
requires-python = ">=3.10"
keywords = [
    "data-engineering",
    "analytics",
    "dbt",
    "etl",
    "pipeline",
    "e-commerce",
    "streamlit",
    "dashboard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "duckdb>=0.9.0",
    "faker>=19.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
cloud = [
    "dbt-bigquery>=1.7.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-storage>=2.12.0",
]

[project.scripts]
generate-events = "scripts.generate_events:main"
run-pipeline = "scripts.etl_pipeline:main"

[project.urls]
Homepage = "https://github.com/dineshpalli/ecommerce-analytics-pipeline"
Repository = "https://github.com/dineshpalli/ecommerce-analytics-pipeline"
Documentation = "https://github.com/dineshpalli/ecommerce-analytics-pipeline#readme"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "dashboards*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | dbt_packages
  | target
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "dbt_packages",
    "target",
    "__pycache__",
]

[tool.ruff.isort]
known-first-party = ["scripts", "dashboards"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    "dbt_packages",
    "target",
    ".venv",
]

[[tool.mypy.overrides]]
module = [
    "faker",
    "plotly.*",
    "streamlit",
    "duckdb",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
